--- a/frontend/src/app/pages/cat-detail/cat-detail.component.html
+++ b/frontend/src/app/pages/cat-detail/cat-detail.component.html
@@ -1,4 +1,3 @@
-<!-- src/app/pages/cat-detail/cat-detail.component.html -->
 <div class="cat-detail-container" *ngIf="!isLoading">
     <div *ngIf="errorMessage; else detailBlock">
       <p class="error">{{ errorMessage }}</p>
@@ -9,6 +8,8 @@
       <div *ngIf="cat?.image">
         <img [src]="'http://localhost:3000/uploads/' + cat?.image" alt="{{ cat?.name }}" />
       </div>
+      <!-- Pulsante per eliminare il gatto -->
+    <button (click)="onDeleteCat()">Elimina Gatto</button>
     </ng-template>
   </div>
   <div *ngIf="isLoading" class="loading">Caricamento...</div>  
