--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -1,12 +1,15 @@
 <nav class="navbar">
   <div class="logo">
-    <img src="assets/cat-logo.png" alt="Logo StreetCats" class="cat-logo" />
     <a routerLink="/">StreetCats</a>
   </div>
   <ul class="nav-links">
     <li><a routerLink="/">Home</a></li>
     <li><a routerLink="/submit">Segnala</a></li>
-    <li><a routerLink="/login">Login</a></li>
-    <li><a routerLink="/register">Registrati</a></li>
+    <li>
+      <!-- il bottone per aprire il modal -->
+      <a href="javascript:void(0)" (click)="openAuthModal()">Login/Registrati</a>    </li>
   </ul>
 </nav>
+
+<!-- Modal di autenticazione -->
+<app-auth-modal #authModal></app-auth-modal>
