--- a/frontend/src/app/components/navbar/navbar.component.scss
+++ b/frontend/src/app/components/navbar/navbar.component.scss
@@ -25,18 +25,17 @@
   }
 
   .nav-links {
-    list-style: none;
     display: flex;
     gap: 1.5rem;
-
+  
     a {
       color: #fff;
-      text-decoration: none;
       font-weight: 500;
+      text-decoration: none;
       transition: color 0.3s ease;
-
+  
       &:hover {
-        color: #FFA726; // accento arancione pastello
+        color: #ffa726;
       }
     }
   }
