--- a/frontend/src/app/pages/submit-cat/submit-cat.component.html
+++ b/frontend/src/app/pages/submit-cat/submit-cat.component.html
@@ -26,8 +26,10 @@
     </div>
 
     <div class="form-group">
-      <label for="image">Immagine (opzionale):</label>
-      <input id="image" type="file" (change)="onFileChange($event)" />
+      <label class="no-click" for="image">Immagine (opzionale):</label>
+      <input id="image"
+             type="file"
+             (change)="onFileChange($event)">
     </div>
 
     <button type="submit" [disabled]="!catForm.valid">Invia Segnalazione</button>
