--- a/frontend/src/app/components/map/map.component.scss
+++ b/frontend/src/app/components/map/map.component.scss
@@ -1,6 +1,4 @@
 #map {
-    height: 500px;
-    width: 100%;
-    border-radius: 10px;
-    margin-top: 1rem;
-  }  
+  height: calc(100vh - 60px); /* “togli” 60px */
+  width: 100%;
+}
