quando si vuole segnalare un gatto senza essere loggati viene aperto il modal di autenticazione

--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -5,7 +5,9 @@
     <a routerLink="/">StreetCats</a>
   </div>
   <ul class="nav-links">
-    <li><a routerLink="/submit">Segnala</a></li>
+    <li>
+      <a (click)="onSegnalaClick()" class="link-segnala"> Segnala </a>
+    </li>
 
     <!-- area autenticazione -->
     <ng-container *ngIf="auth.isLoggedIn(); else guestLinks">
