migrato il backend a ES Modules, modifica test 7, aggiunto controllo su modifica gatto

--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -6,7 +6,7 @@
   </div>
   <ul class="nav-links">
     <li>
-      <a (click)="onSegnalaClick()" class="link-segnala"> Segnala </a>
+      <a href="javascript:void(0)" (click)="onSegnalaClick()" class="link-segnala"> Segnala </a>
     </li>
 
     <!-- area autenticazione -->
